# zenith

./: Cargo.toml  LICENSE  README.md  install.sh
src/: main.rs  system.rs  ui.rs
